<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView_title_credits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/credits"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="20dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/textView_artists"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:text="@string/artists"
        android:textAlignment="center"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/textView_credits1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:text="@string/txtCredits1"
        android:textAlignment="center"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/textView_total_games_playedlol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:text=""
        android:textAlignment="center"
        android:textSize="20dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="20dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/textView_developer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:text="DEVELOPER"
        android:textAlignment="center"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/textView_credits2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:text="Antonio :)"
        android:textAlignment="center"
        android:textSize="20dp" />

</LinearLayout>